--- a/public/css/holiday.css
+++ b/public/css/holiday.css
@@ -1,10 +1,15 @@
+
+﻿
 /* Holidays Section */
 .holidays-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-image: linear-gradient(rgba(255, 255, 255, 0.281), rgba(250, 244, 244, 0)), url(../images/family.png); 
     background-position: center;
     background-repeat: 10px;
     background-size: 1;
-    padding: 110px;
+    padding: 250px;
     background-color: #fff; 
 }
 
@@ -25,39 +30,39 @@
     background: none;
     border-radius: 200px;
     margin-bottom: 12px;
-
 }
 
 /* Add Button */
 .add-button,
 .select-button,
 .update-button {
-padding: 15.5px 30px;
-border-radius: 100px;
-background-color: #2ba8fb;
-color: #ffffff;
-font-weight: bold;
-transition: all 0.5s;
--webkit-transition: all 0.5s;
+    padding: 15.5px 30px;
+    border-radius: 100px;
+    background-color: #2ba8fb;
+    color: #ffffff;
+    font-weight: bold;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
 }
 
 .add-button:hover,
 .select-button:hover,
 .update-button:hover {
-background-color: #6fc5ff;
-box-shadow: 0 0 20px #6fc5ff50;
-transform: scale(1.1);
+    background-color: #6fc5ff;
+    box-shadow: 0 0 20px #6fc5ff50;
+    transform: scale(1.1);
 }
 
 .add-button:active,
 .select-button:active,
 .update-button:active {
-background-color: #3d94cf;
-transition: all 0.25s;
--webkit-transition: all 0.25s;
-box-shadow: none;
-transform: scale(0.98);
+    background-color: #3d94cf;
+    transition: all 0.25s;
+    -webkit-transition: all 0.25s;
+    box-shadow: none;
+    transform: scale(0.98);
 }
+
 .add-button:hover {
     background-color: #0099cc;
 }
@@ -65,14 +70,14 @@ transform: scale(0.98);
 .card {
     position: relative;
     width: 400px;
-    height: 560px;
+    height: 600px;
     color: #fff;
     background-color: rgba(2, 1, 1, 0.4);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 30px 50px -12px inset,
                 rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
     border-radius: 30px;
-    padding: 55px;
-    margin: 80px auto; 
+    padding: 60px;
+    margin: 0 20px; 
     transition: all 0.5s ease;
 }
 
@@ -80,36 +85,35 @@ transform: scale(0.98);
     transform: scale(1.05);
 }
 
-
 /* Add Button Styles */
 .add-button,
 .select-button,
 .update-button {
-padding: 15.5px 30px;
-border-radius: 100px;
-background-color: #2ba8fb;
-color: #ffffff;
-font-weight: bold;
-transition: all 0.5s;
--webkit-transition: all 0.5s;
+    padding: 15.5px 40px;
+    border-radius: 100px;
+    background-color: #2ba8fb;
+    color: #ffffff;
+    font-weight: bold;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
 }
 
 .add-button:hover,
 .select-button:hover,
 .update-button:hover {
-background-color: #6fc5ff;
-box-shadow: 0 0 20px #6fc5ff50;
-transform: scale(1.1);
+    background-color: #6fc5ff;
+    box-shadow: 0 0 20px #6fc5ff50;
+    transform: scale(1.1);
 }
 
 .add-button:active,
 .select-button:active,
 .update-button:active {
-background-color: #3d94cf;
-transition: all 0.25s;
--webkit-transition: all 0.25s;
-box-shadow: none;
-transform: scale(0.98);
+    background-color: #3d94cf;
+    transition: all 0.25s;
+    -webkit-transition: all 0.25s;
+    box-shadow: none;
+    transform: scale(0.98);
 }
 
 .btn2 {
@@ -132,6 +136,56 @@ transform: scale(0.98);
 .btn2:hover {
     background-color: rgba(0, 0, 0, 0.8);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+/* ====================================================================================================================
+Family Members List Table Styles
+====================================================================================================================*/
+#holidaySelectionList {
+    margin: 0 auto;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    border-collapse: separate;
+    border-spacing: 0;
+    border: 1px solid #ddd;
+    background-color: rgba(2, 1, 1, 0.1);
+}
+    
+#holidaySelectionList th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: rgb(255, 255, 255);
+}
+    
+#holidaySelectionList td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+    
+#holidaySelectionList tr {
+    background-color: rgba(2, 1, 1, 0.1); 
+}
+
+/* ====================================================================================================================
+Card Styles
+====================================================================================================================*/
+.card {
+    position: relative;
+    width: 550px;
+    height: 550px;
+    background-color: rgba(2, 1, 1, 0.4); 
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 30px 50px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
+    border-radius: 30px;
+    padding: 50px;
+    margin: 50px;
+    transition: all 0.5s ease;
+}
+
+.card:hover {
+    transform: scale(1.05);
 }
 
 
